--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "seedrandom": "^3.0.5",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.4"
   },
